- added profile icon parse and load - added friend list adapter change listener

--- a/app/src/main/res/layout/view_friend.xml
+++ b/app/src/main/res/layout/view_friend.xml
@@ -2,46 +2,50 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:parentTag="RelativeLayout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    tools:layout_width="match_parent"
+    tools:layout_height="80dp">
 
     <com.lolchat.myanmarking.myanchat.base.view.SquareImageView
         android:id="@+id/friendSummonerIcon"
-        android:layout_alignTop="@+id/friendName"
-        android:layout_alignBottom="@+id/friendMessage"
-        android:src="@mipmap/ic_launcher"
-        android:layout_marginEnd="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:src="@drawable/default_sum_icon"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_centerVertical="true"
+        android:adjustViewBounds="true"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         />
 
-    <TextView
-        android:id="@+id/friendName"
-        android:text="MyanMarkKing"
-        android:textStyle="bold"
-        android:fontFamily="@string/roboto_thin"
-        android:textColor="@color/black"
-        android:layout_toStartOf="@+id/friendStatus"
-        android:layout_toEndOf="@+id/friendSummonerIcon"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_toStartOf="@+id/friendStatus"
+        android:layout_toEndOf="@+id/friendSummonerIcon">
+        <TextView
+            android:id="@+id/friendName"
+            tools:text="MyanMarkKing"
+            android:textStyle="bold"
+            android:fontFamily="@string/roboto_thin"
+            android:textColor="@color/black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
 
-    <TextView
-        android:id="@+id/friendMessage"
-        android:layout_below="@+id/friendName"
-        android:textColor="@color/black_87"
-        android:fontFamily="@string/roboto_light"
-        android:layout_toStartOf="@+id/friendStatus"
-        android:layout_toEndOf="@+id/friendSummonerIcon"
-        android:text="Just gave up... Cya LoL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        <TextView
+            android:id="@+id/friendMessage"
+            android:textColor="@color/black_87"
+            android:fontFamily="@string/roboto_light"
+            tools:text="Just gave up... Cya LoL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/friendStatus"
-        android:text="Chatting"
+        tools:text="Chatting"
         android:background="@drawable/round_rect"
         android:backgroundTint="@color/black_54"
         android:textColor="@color/white"
