--- a/app/src/main/res/layout/view_friend.xml
+++ b/app/src/main/res/layout/view_friend.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:parentTag="RelativeLayout"
+    tools:parentTag="FrameLayout"
+    tools:background="@color/red_700_a50"
     tools:layout_width="match_parent"
     tools:layout_height="80dp">
 
@@ -9,8 +10,7 @@
         android:id="@+id/friendSummonerIcon"
         android:src="@drawable/default_sum_icon"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="20dp"
-        android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
         android:adjustViewBounds="true"
         android:layout_width="60dp"
         android:layout_height="60dp"
@@ -20,7 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center"
+        android:layout_marginStart="80dp"
+        android:gravity="center|start"
         android:layout_toStartOf="@+id/friendStatus"
         android:layout_toEndOf="@+id/friendSummonerIcon">
         <TextView
@@ -28,33 +29,26 @@
             tools:text="MyanMarkKing"
             android:textStyle="bold"
             android:fontFamily="@string/roboto_thin"
-            android:textColor="@color/black"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/white_87"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
 
         <TextView
-            android:id="@+id/friendMessage"
-            android:textColor="@color/black_87"
-            android:fontFamily="@string/roboto_light"
-            tools:text="Just gave up... Cya LoL"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            android:id="@+id/friendStatus"
+            tools:text="Chatting"
+            android:background="@drawable/round_rect"
+            android:backgroundTint="@color/black_54"
+            android:textColor="@color/white"
+            android:padding="5dp"
+            android:layout_gravity="bottom|start"
+            android:layout_marginEnd="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/friendStatus"
-        tools:text="Chatting"
-        android:background="@drawable/round_rect"
-        android:backgroundTint="@color/black_54"
-        android:textColor="@color/white"
-        android:padding="5dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+
 
 </merge>
