--- a/app/src/main/res/drawable-nodpi/divider_itemview.xml
+++ b/app/src/main/res/drawable-nodpi/divider_itemview.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:top="-6dp" android:left="-6dp" android:right="-6dp">
         <shape>
-            <stroke android:color="@color/md_grey_300" android:width="0.5dp"/>
+            <stroke android:color="@color/white" android:width="0.5dp"/>
         </shape>
     </item>
 </layer-list>
