- initializtion now is done in the main activity. - added manifest main activity background - added greyColorFilter to profile image of offline friends

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name= "red_700_a50">#32d32f2f</color>
 
     <color name="black_87">#d9000000</color>
+    <color name="black_65">#c3000000</color>
     <color name="black_190">#be000000</color>
     <color name="black_38">#5f000000</color>
     <color name="black_54">#8A000000</color>
