--- a/app/src/main/res/layout/frag_friend_match_list.xml
+++ b/app/src/main/res/layout/frag_friend_match_list.xml
@@ -1,8 +1,237 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="true">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/friend_match_appbar_height"
+        android:elevation="0dp"
+        android:background="@color/league_blue_dark"
+        android:fitsSystemWindows="true">
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+            app:contentScrim="@color/league_blue_dark"
+            app:statusBarScrim="@color/league_blue_dark"
+            android:fitsSystemWindows="true">
+
+            <ImageView
+                android:id="@+id/collapsingImage"
+                android:src="@drawable/ahri_arcade"
+                tools:src="@color/black"
+                android:scaleType="fitXY"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.5"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"/>
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:elevation="0dp"
+                app:layout_collapseMode="pin">
+
+                <ImageView
+                    android:id="@+id/back"
+                    android:src="@drawable/ic_left_arrow_chevron"
+                    android:adjustViewBounds="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+               <LinearLayout
+                   android:orientation="vertical"
+                   android:layout_marginStart="100dp"
+                   android:layout_width="wrap_content"
+                   android:layout_height="match_parent">
+                   <TextView
+                       android:id="@+id/title1"
+                       android:layout_width="match_parent"
+                       android:layout_height="0dp"
+                       android:layout_weight="1"
+                       android:gravity="bottom"
+                       android:text="DeadPT"
+                       android:textColor="@color/white" />
+                   <TextView
+                       android:id="@+id/title2"
+                       android:layout_width="match_parent"
+                       android:layout_height="0dp"
+                       android:layout_weight="1"
+                       android:gravity="top"
+                       android:text="ARAM - 22m"
+                       android:textColor="@color/league_blue" />
+               </LinearLayout>
+            </android.support.v7.widget.Toolbar>
+            <View
+                android:layout_gravity="bottom"
+                android:background="@color/league_yellow"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"/>
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
+
+    <com.lolchat.myanmarking.myanchat.base.view.MyNestedScrollView
+        android:background="@color/windowBackground"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="skdhkjshdkjshd"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
 
-</FrameLayout>
+        </LinearLayout>
+
+    </com.lolchat.myanmarking.myanchat.base.view.MyNestedScrollView>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/friendSummonerIcon"
+        android:src="@drawable/default_sum_icon"
+        app:layout_behavior="com.lolchat.myanmarking.myanchat.ui.fragment.FragFriendMatchList.FriendListAvatarBehavior"
+        app:civ_border_width="2dp"
+        android:fitsSystemWindows="true"
+        android:elevation="12dp"
+        android:layout_marginStart="@dimen/friend_match_avatar_original_margin_start"
+        app:civ_border_color="@color/league_yellow"
+        android:layout_width="@dimen/friend_match_avatar_wh"
+        android:layout_height="@dimen/friend_match_avatar_wh"/>
+
+   <!-- <FrameLayout
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:background="@color/windowBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    </FrameLayout>-->
+
+</android.support.design.widget.CoordinatorLayout>
