--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="league_blue">#e60acbe6</color>
+    <color name="league_blue">#fa0acbe6</color>
     <color name="ripple_friend_color">#c80acbe6</color>
-    <color name="league_yellow">#e6c89b3c</color>
+    <color name="league_yellow">#fac89b3c</color>
     <color name="league_yellow_letter">#CBBC90</color>
     <color name="white">#FFF</color>
     <color name="white_245">#f5ffffff</color>
@@ -17,6 +17,7 @@
     <color name="white_50">#7dffffff</color>
     <color name="white_25">#32ffffff</color>
     <color name="black">#000</color>
+    <color name="league_blue_dark">#031425</color>
 
     <color name= "green_700_a50">#50388e3c</color>
     <color name= "red_700_a50">#32d32f2f</color>
