--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="friend_match_avatar_wh">80dp</dimen>
+    <dimen name="friend_match_avatar_original_margin_start">10dp</dimen>
+    <dimen name="friend_match_appbar_height">250dp</dimen>
 </resources>
